--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "chai": "^3.5.0",
+    "event-stream": "^3.3.4",
     "gulp": "^3.9.1",
     "lodash": "^4.16.1",
+    "mocha": "^3.0.2",
     "through2": "^2.0.1"
   }
 }
